# SuperReconciliation

./: .gitignore  CMakeLists.txt  README.md
examples/: segdup  simple  unordered
input/: application  application_tree  segdup  segdup_tree  simple  simple_tree  test
lib/: tree.hh
results/: generate.sh
results/manual/: application  segdup  simple
results/random/: depth-10-length-10  depth-10-length-2  depth-10-length-3  depth-10-length-4  depth-10-length-5  depth-10-length-6  depth-10-length-7  depth-10-length-8  depth-10-length-9
results/simulation/: .gitignore  interface.py  plot.py  simulate.py  simulation.py  viz.py
results/simulation/loss-0.2/: distances.txt  durations.txt
results/simulation/loss-0.5/: distances.txt  durations.txt
results/simulation/loss-0.8/: distances.txt  durations.txt
results/simulation/p-0/: distances.json  durations.json
results/simulation/p-0.1/: distances.json  durations.json
results/simulation/p-0.2/: distances.json  durations.json
results/simulation/p-0.3/: distances.json  durations.json
results/simulation/p-0.4/: distances.json  durations.json
results/simulation/p-0.5/: distances.json  durations.json
results/simulation/p-0.6/: distances.json  durations.json
results/simulation/p-0.7/: distances.json  durations.json
results/simulation/p-0.8/: distances.json  durations.json
results/simulation/p-0.9/: distances.json  durations.json
results/simulation/p-1/: distances.json  durations.json
results/simulation/src/: interface.py  sample.py
simulation/: simulate.py
simulation/src/: interface.py
src/: Event.cpp  Event.hpp  EventTree.cpp  EventTree.hpp  ExtendedNumber.hpp  ExtendedNumber.test.cpp  ExtendedNumber.tpp  Gene.hpp  Synteny.cpp  Synteny.hpp  Synteny.test.cpp  erase.cpp  evaluate.cpp  event_tree_viz.cpp  main.cpp  random.cpp  reconcile.cpp  simulate.cpp  small_philogeny.cpp  small_philogeny.hpp  super_reconciliation.cpp  super_reconciliation.hpp  tests.cpp  tree_parser.cpp  tree_parser.hpp  unordered_super_reconciliation.cpp  util.cpp  util.hpp  viz.cpp
src/algo/: erase.cpp  erase.hpp  simulate.hpp  simulate.tpp  super_reconciliation.cpp  super_reconciliation.hpp  unordered_super_reconciliation.cpp  unordered_super_reconciliation.hpp  unordered_super_reconciliation.test.cpp
src/io/: nhx.cpp  nhx.hpp  nhx.test.cpp  nhx_parser.cpp  nhx_parser.hpp  nhx_parser.test.cpp  tree_parser.cpp  tree_parser.hpp  util.cpp  util.hpp
src/model/: Event.cpp  Event.hpp  Event.test.cpp  Gene.hpp  Synteny.cpp  Synteny.hpp  Synteny.test.cpp
src/util/: ExtendedNumber.hpp  MultivaluedNumber.hpp  MultivaluedNumber.test.cpp  MultivaluedNumber.tpp  containers.hpp  containers.tpp  numeric.hpp  numeric.tpp  set.hpp  set.test.cpp  set.tpp  tree.hpp  tree.tpp
tools/: evaluate.sh  plot.py  plot.sh
tools/results/: by-depth.json  by-length.json  ordered-by-depth.json  ordered-by-length.json  unordered-by-length.json
